# zov

./: .gitignore  Cargo.toml  README.md  main.py  rustfmt.toml
.github/: FUNDING.yml
apps/raplord/: Cargo.toml
crates/: README.md
crates/compiler/: README.md
crates/compiler/zov-ast/: Cargo.toml
crates/compiler/zov-ast/src/: ast.rs  lib.rs  pretty.rs
crates/compiler/zov-compiler/: Cargo.toml
crates/compiler/zov-compiler/src/: compiler.rs  lib.rs
crates/compiler/zov-driver/: Cargo.toml
crates/compiler/zov-driver/src/: cmd.rs  driver.rs  lib.rs
crates/compiler/zov-driver/src/cmd/: build.rs
crates/compiler/zov-interner/src/interner/: symbol.rs
crates/compiler/zov-parser/: Cargo.toml
crates/compiler/zov-parser/src/: parser.rs
crates/compiler/zov-phonemes/src/: phoneme.rs
crates/compiler/zov-phonemes/src/phoneme/: consonant.rs  vowel.rs
crates/compiler/zov-phonemizer/: Cargo.toml  main.py
crates/compiler/zov-phonemizer/src/: lib.rs  phonemizer.rs
crates/compiler/zov-reporter/: Cargo.toml
crates/compiler/zov-reporter/src/: error.rs  lib.rs
crates/compiler/zov-samples/: base.txt
crates/compiler/zov-tokenizer/: Cargo.toml
crates/compiler/zov-tokenizer/src/: cursor.rs  lib.rs  state.rs  tokenizer.rs
crates/compiler/zov-tokens/: Cargo.toml
crates/compiler/zov-tokens/src/: token.rs
crates/compiler/zov-tokens/src/token/: group.rs  punctuation.rs  word.rs
crates/rhymer/: README.md
crates/rhymer/zov/: Cargo.toml
crates/rhymer/zov-driver/: Cargo.toml
crates/rhymer/zov-driver/src/: driver.rs
crates/rhymer/zov-interner/: Cargo.toml
crates/rhymer/zov-notes/: README.md
crates/rhymer/zov-phonemes/: Cargo.toml
crates/rhymer/zov-phonemes/src/: lib.rs  phoneme.rs
crates/rhymer/zov-phonemes/src/phoneme/: consonant.rs  vowel.rs
crates/rhymer/zov-phonemizer/: Cargo.toml
crates/rhymer/zov-rhymer/: Cargo.toml
crates/rhymer/zov-samples/: README.md
crates/rhymer/zov-session/: Cargo.toml
crates/rhymer/zov-session/src/: session.rs
crates/rhymer/zov-tokenizer/: Cargo.toml
crates/rhymer/zov-tokens/src/: token.rs
crates/rhymer/zov-tokens/src/token/: punctuation.rs  quote.rs  word.rs
crates/rhymer/zov/src/: main.rs
kits/eazing/: Cargo.toml  README.md
kits/eazing/benches/: all.rs
kits/eazing/benches/bench/: mod.rs
kits/eazing/benches/bench/backtracking/: bench_in_back.rs  bench_in_out_back.rs  bench_out_back.rs  mod.rs
kits/eazing/benches/bench/bezier/: cubic_bezier.rs
kits/eazing/benches/bench/logarithmic/: mod.rs
kits/eazing/benches/bench/oscillatory/bounce/: bench_in_bounce.rs  bench_out_bounce.rs
kits/eazing/benches/bench/oscillatory/elastic/: bench_in_out_elastic.rs  bench_out_elastic.rs
kits/eazing/benches/bench/polynomial/: mod.rs
kits/eazing/benches/bench/polynomial/cubic/: bench_in_cubic.rs  bench_in_out_cubic.rs  bench_out_cubic.rs
kits/eazing/benches/bench/polynomial/decic/: bench_in_out_decic.rs
kits/eazing/benches/bench/polynomial/hectic/: bench_out_hectic.rs  mod.rs
kits/eazing/benches/bench/polynomial/octic/: mod.rs
kits/eazing/benches/bench/polynomial/quadratic/: bench_in_quadratic.rs
kits/eazing/benches/bench/polynomial/quartic/: bench_in_quartic.rs  bench_out_quartic.rs  mod.rs
kits/eazing/benches/bench/polynomial/quintic/: bench_in_out_quintic.rs  bench_in_quintic.rs  bench_out_quintic.rs  mod.rs
kits/eazing/benches/bench/polynomial/septic/: bench_out_septic.rs
kits/eazing/benches/bench/polynomial/sextic/: bench_in_out_sextic.rs
kits/eazing/benches/bench/root/: bench_in_out_sqrt.rs  bench_out_sqrt.rs  mod.rs
kits/eazing/benches/bench/trigonometric/: mod.rs
kits/eazing/benches/bench/trigonometric/circle/: bench_in_circle.rs  bench_in_out_circle.rs  bench_out_circle.rs  mod.rs
kits/eazing/benches/bench/trigonometric/sine/: bench_in_sine.rs  bench_out_sine.rs  mod.rs
kits/eazing/examples/: cubic.rs  ease.rs  lerp.rs  main.rs  smoothstep.rs
kits/eazing/src/: easing.rs  interpolation.rs  lib.rs
kits/eazing/src/easing/: bezier.rs  oscillatory.rs  polynomial.rs  trigonometric.rs
kits/eazing/src/easing/bezier/: cubic_bezier.rs
kits/eazing/src/easing/logarithmic/: log10.rs
kits/eazing/src/easing/oscillatory/: bounce.rs  elastic.rs
kits/eazing/src/easing/polynomial/: cubic.rs  decic.rs  hectic.rs  linear.rs  none.rs  octic.rs  quadratic.rs  septic.rs  sextic.rs
kits/eazing/src/easing/trigonometric/: circle.rs
kits/eazing/src/interpolation/: smoothstep.rs
kits/eazing/src/interpolation/smoothstep/: polynomial.rs  standard.rs  trigonometric.rs
kits/eazing/src/interpolation/smoothstep/polynomial/: po_cubic.rs  po_quartic.rs  po_quintic.rs
kits/eazing/src/interpolation/smoothstep/standard/: smootherstep.rs  smoothstep.rs
kits/eazing/src/interpolation/smoothstep/trigonometric/: trigo.rs
notes/: README.md
notes/doc/: README.md
notes/doc/benchmarks/: README.md
notes/docs/: README.md
notes/docs/benchmarks/: README.md
sources/: README.md
sources/data/: Cargo.toml
sources/data/src/: bench.rs
sources/eazing/: Cargo.toml  README.md
sources/eazing/benches/: all.rs
sources/eazing/benches/bench/: mod.rs
sources/eazing/examples/: cubic.rs  ease.rs  lerp.rs  smoothstep.rs
sources/eazing/src/: easing.rs  interpolation.rs
sources/eazing/src/easing/: exponential.rs  logarithmic.rs  polynomial.rs
sources/eazing/src/easing/backtracking/: back.rs
sources/eazing/src/easing/exponential/: expo2.rs  expoe.rs
sources/eazing/src/easing/polynomial/: cubic.rs  decic.rs  linear.rs  none.rs  nonic.rs  quartic.rs  quintic.rs
sources/eazing/src/easing/root/: sqrt.rs
sources/eazing/src/easing/trigonometric/: circle.rs  sine.rs
sources/eazing/src/interpolation/: piecewize.rs  polynomial.rs  trigonometric.rs
sources/eazing/src/interpolation/linear/: lerp.rs
sources/eazing/src/interpolation/piecewize/: polynomial.rs  quadratic.rs
sources/eazing/src/interpolation/polynomial/: cubic.rs  lagrange.rs  newton.rs  none.rs  quartic.rs  quintic.rs  smootherstep.rs  smoothstep.rs
sources/eazing/src/interpolation/rational/: cubic.rs  quadratic.rs
(+53 files in other folders)
