[workspace]
resolver = '2'
members = ["sources/data", "sources/eazing", "apps/raplord"]
exclude = [".todo.md", ".github/*"]
# default-members = ["crates/zov"]

[workspace.package]
authors = ["@invisageable"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/invisageable/zov"
version = "0.0.0"

[workspace.dependencies]
# internal:sources.
data = { path = "sources/data", version = "0.0.0" }
eazing = { path = "sources/eazing", version = "0.0.0" }

# internal:apps.
raplord = { path = "apps/raplord", version = "0.0.0" }

# external:crates.
criterion = { version = "0.5.1", features = ["html_reports"] }
libm = "0.2.8"
lyon_geom = { version = "1.0.5", default-features = false }
rand = "0.9.0"

[profile.release]
codegen-units = 1 # ..
debug = true      # ..
lto = true        # ..
opt-level = 3     # better optimization — alternative ("z").
strip = true      # ..
