[workspace]
resolver = '2'

members = [
  "apps/raplord",
  "crates/rhymer/zov",
  "sources/eazing",
]

exclude = [".todo.md", ".github/*"]
default-members = ["crates/rhymer/zov"]

[workspace.package]
authors = ["@invisageable"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/invisageable/zov"
version = "0.0.1"

[workspace.dependencies]
# internal:crates:zov.
zov = { path = "crates/rhymer/zov", version = "0.0.1" }
zov-driver = { path = "crates/rhymer/zov-driver", version = "0.0.1" }
zov-interner = { path = "crates/rhymer/zov-interner", version = "0.0.1" }
zov-phonemes = { path = "crates/rhymer/zov-phonemes", version = "0.0.1" }
zov-phonemizer = { path = "crates/rhymer/zov-phonemizer", version = "0.0.1" }
zov-rhymer = { path = "crates/rhymer/zov-rhymer", version = "0.0.1" }
zov-session = { path = "crates/rhymer/zov-session", version = "0.0.1" }
zov-tokenizer = { path = "crates/rhymer/zov-tokenizer", version = "0.0.1" }
zov-tokens = { path = "crates/rhymer/zov-tokens", version = "0.0.1" }

# internal:sources.
eazing = { path = "sources/eazing", version = "0.0.1" }

# internal:apps.
raplord = { path = "apps/raplord", version = "0.0.1" }

# external:crates.
criterion = { version = "0.5.1", features = ["html_reports"] }
libm = "0.2.8"
lyon_geom = { version = "1.0.5", default-features = false }
pyo3 = "0.24.0"
rand = "0.9.0"
smol_str = "0.3.2"

[profile.release]
codegen-units = 1 # ..
debug = true      # ..
lto = true        # ..
opt-level = 3     # better optimization — alternative ("z").
strip = true      # ..
