[workspace]
resolver = '2'

members = [
  "apps/raplord",
  "crates/compiler/zov",
  "sources/eazing",
]

exclude = [".todo.md", ".github/*"]
default-members = ["crates/compiler/zov"]

[workspace.package]
authors = ["@invisageable"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/invisageable/zov"
version = "0.0.1"

[workspace.dependencies]
# internal:crates:zov.
zov = { path = "crates/compiler/zov", version = "0.0.1" }
zov-ast = { path = "crates/compiler/zov-ast", version = "0.0.1" }
zov-compiler = { path = "crates/compiler/zov-compiler", version = "0.0.1" }
zov-driver = { path = "crates/compiler/zov-driver", version = "0.0.1" }
zov-interner = { path = "crates/compiler/zov-interner", version = "0.0.1" }
zov-parser = { path = "crates/compiler/zov-parser", version = "0.0.1" }
zov-phonemes = { path = "crates/compiler/zov-phonemes", version = "0.0.1" }
zov-phonemizer = { path = "crates/compiler/zov-phonemizer", version = "0.0.1" }
zov-reporter = { path = "crates/compiler/zov-reporter", version = "0.0.1" }
zov-session = { path = "crates/compiler/zov-session", version = "0.0.1" }
zov-tokenizer = { path = "crates/compiler/zov-tokenizer", version = "0.0.1" }
zov-tokens = { path = "crates/compiler/zov-tokens", version = "0.0.1" }

# internal:sources.
eazing = { path = "sources/eazing", version = "0.0.1" }

# internal:apps.
raplord = { path = "apps/raplord", version = "0.0.1" }

# external:crates.
anyhow = "1.0.97"
clap = "4.5.32"
clap_derive = "4.5.32"
criterion = { version = "0.5.1", features = ["html_reports"] }
egui = "0.31.1"
libm = "0.2.8"
lyon_geom = { version = "1.0.5", default-features = false }
pyo3 = "0.24.0"
rand = "0.9.0"
smol_str = "0.3.2"
unicode-normalization = "0.1.24"

[profile.release]
codegen-units = 1 # ..
debug = true      # ..
lto = true        # ..
opt-level = 3     # better optimization — alternative ("z").
strip = true      # ..
