[package]
name = "raplord"
description = "..."
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

keywords = [
  "editor",
  "poetry",
]

# [lib]
# doc-test = false

[dependencies]
# internals.
eazing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
