[package]
name = "eazing"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[lib]
doc-test = false

# [features]
# default = ["libm", "alloc"]
# std = []
# alloc = []
# libm = ["dep:libm"]

[dependencies]
# internals.

# externals.
libm = { workspace = true, optional = true }
lyon_geom = { workspace = true, default-features = false }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

# bench:only.
bevy_tween = "0.6.0"
glissade = "0.2.5"
emath = "0.31.1"
easings = "0.1.0"
keyframe = "1.1.1"
interpolation = "0.3.0"
simple-easing2 = "1.0.2"
