[package]
name = "zov-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.

# internal:crates.
zov-parser = { workspace = true }
zov-phonemes = { workspace = true }
zov-phonemizer = { workspace = true }
zov-reporter = { workspace = true }
zov-tokenizer = { workspace = true }
zov-tokens = { workspace = true }

# external:crates.
unicode-normalization = { workspace = true }
