[package]
name = "zov-driver"
version.workspace = true
edition.workspace = true

[dependencies]
# internal:source.

# internal:crates.
zov-compiler = { workspace = true }
zov-reporter = { workspace = true }
zov-session = { workspace = true }

# external:crates.
clap = { workspace = true }
clap_derive = { workspace = true }
